.config/VSCodium/logs/20220618T192155/exthost1/output_logging_20220618T192204/3-Quokka.log
​​​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

object ​​​​​at ​​​​​​​​typeof b​​​ ​quokka.js:12:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  10 |  
  11 |  
> 12 | console.log(typeof ); 
     |                    ^ SyntaxError: Unexpected token (12:19) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​at ​​​​​​quokka.js:12:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
  10 |  
  11 |  
> 12 | console.log(a ==); 
     |                 ^ SyntaxError: Unexpected token (12:16) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

false ​​​​​at ​​​​​​​​a == b​​​ ​quokka.js:12:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

false ​​​​​at ​​​​​​​​a === b​​​ ​quokka.js:12:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | if  
     |    ^ SyntaxError: Unexpected token (11:3) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | if () 
     |     ^ SyntaxError: Unexpected token (11:4) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | if (a) 
     |       ^ SyntaxError: Unexpected token (11:6) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | if (a ==b ) 
     |            ^ SyntaxError: Unexpected token (11:11) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | if (a ==) 
     |         ^ SyntaxError: Unexpected token (11:8) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | if (a == b) 
     |            ^ SyntaxError: Unexpected token (11:11) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

{ name: 'upal', age: 20 }
  ​​​​​at ​​​​​​​​a​​​ ​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | a --b 
     |     ^ SyntaxError: Unexpected token (11:4) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
Assignment to constant variable. 
  ​​​​​at ​​​​​​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | a -- b 
     |      ^ SyntaxError: Unexpected token (11:5) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

{ name: 'upal', age: 20 }
  ​​​​​at ​​​​​​​​a​​​ ​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | a == 
     |     ^ SyntaxError: Unexpected token (11:4) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

{ name: 'upal', age: 20 }
  ​​​​​at ​​​​​​​​a​​​ ​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
c is not defined 
  ​​​​​at ​​​​​​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | return a + 
     |           ^ SyntaxError: Unexpected token (11:10) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | return a == 
     |            ^ SyntaxError: Unexpected token (11:11) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
clg is not defined 
  ​​​​​at ​​​​​​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
cons is not defined 
  ​​​​​at ​​​​​​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
consl is not defined 
  ​​​​​at ​​​​​​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

{ log: [λ],
  warn: [λ],
  dir: [λ],
  time: [λ: time],
  timeEnd: [λ: timeEnd],
  timeLog: [λ: timeLog],
  trace: [λ: trace],
  assert: [λ: assert],
  clear: [λ: clear],
  count: [λ: count],
  ... }
  ​​​​​at ​​​​​​​​console​​​ ​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​at ​​​​​​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

{ name: 'upal', age: 20 }
  ​​​​​at ​​​​​​​​a​​​ ​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
   9 | } 
  10 |  
> 11 | console.log(a ===) 
     |                  ^ SyntaxError: Unexpected token (11:17) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

false ​​​​​at ​​​​​​​​a === b​​​ ​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

false ​​​​​at ​​​​​​​​a == b​​​ ​quokka.js:11:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
a is not defined 
  ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | a + 
    |    ^ SyntaxError: Unexpected token (1:3) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
a is not defined 
  ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | const 
    |      ^ SyntaxError: Unexpected token (1:5) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | 2 _ 
    |   ^ SyntaxError: Unexpected token (1:2) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | 2 _  
    |   ^ SyntaxError: Unexpected token (1:2) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
_ is not defined 
  ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
cons is not defined 
  ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | () 
    |  ^ SyntaxError: Unexpected token (1:1) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | (2 +) 
    |     ^ SyntaxError: Unexpected token (1:4) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
 
co is not defined 
  ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | console. 
    |         ^ SyntaxError: Unexpected token (1:8) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

2 ​​​​​at ​​​​​​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

4 ​​​​​at ​​​​​​​​2 + 2​​​ ​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | console.log(2 + 2'); 
    |                  ^ SyntaxError: Unterminated string constant (1:17) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

22 ​​​​​at ​​​​​​​​2 + '2'​​​ ​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | console.log(2 + 2'); 
    |                  ^ SyntaxError: Unterminated string constant (1:17) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

22 ​​​​​at ​​​​​​​​2 + '2'​​​ ​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | console.log(]2 + '2'); 
    |             ^ SyntaxError: Unexpected token (1:12) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

22 ​​​​​at ​​​​​​​​2 + '2'​​​ ​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | console.log('2 + '2'); 
    |                   ^ SyntaxError: Unexpected token (1:18) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

22 ​​​​​at ​​​​​​​​'2' + '2'​​​ ​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | console.log('2'  '2'); 
    |                  ^ SyntaxError: Unexpected token (1:17) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

4 ​​​​​at ​​​​​​​​'2' * '2'​​​ ​quokka.js:1:1​
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​
Failed to instrument quokka.js 
> 1 | console.log('2' * '2); 
    |                   ^ SyntaxError: Unterminated string constant (1:18) 
​​​​​Quokka 'Untitled-1.js' (node: v18.3.0)​​​​

4 ​​​​​at ​​​​​​​​'2' * 2​​​ ​quokka.js:1:1​
​